--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/anpdgovbr/backlog-dim/issues"
   },
   "scripts": {
-    "build": "prisma generate && next build && pnpm run postbuild",
+    "build": "prisma generate && cross-env NEXT_DISABLE_TURBOPACK=1 next build && pnpm run postbuild",
     "postbuild": "node scripts/copy-public-to-standalone.cjs",
     "build-routes": "node scripts/generateDevRoutes.cjs",
     "build-routes:verbose": "node scripts/generateDevRoutes.cjs --verbose",
@@ -62,26 +62,26 @@
     "prisma:studio": "npx prisma studio",
     "start": "next start",
     "type-check": "tsc --noEmit",
-    "infra:setup": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.js -o .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.js -o .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.js -o .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs",
-    "infra:setup:manual": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.js -o .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.js -o .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.js -o .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs --manual",
-    "infra:setup:force": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/setup-cross-platform.js -o .infra/setup-cross-platform.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/docker-helper.js -o .infra/docker-helper.cjs && curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/db-helper.js -o .infra/db-helper.cjs && node .infra/setup-cross-platform.cjs --force --auto",
-    "infra:up": "node .infra/docker-helper.cjs up",
-    "infra:down": "node .infra/docker-helper.cjs down",
-    "infra:logs": "node .infra/docker-helper.cjs logs",
-    "infra:reset": "node .infra/docker-helper.cjs reset",
-    "infra:clean": "node .infra/docker-helper.cjs clean",
-    "infra:psql": "node .infra/docker-helper.cjs psql",
-    "infra:status": "node .infra/docker-helper.cjs status",
-    "infra:backup": "node .infra/docker-helper.cjs backup",
-    "infra:db:init": "node .infra/db-helper.cjs setup",
-    "infra:db:fresh": "node .infra/db-helper.cjs fresh",
-    "infra:db:migrate": "node .infra/db-helper.cjs migrate",
-    "infra:db:seed": "node .infra/db-helper.cjs seed",
-    "infra:db:studio": "node .infra/db-helper.cjs studio",
-    "infra:db:reset": "node .infra/db-helper.cjs reset",
-    "infra:update": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/update-scripts.js -o .infra/update-scripts.cjs && node .infra/update-scripts.cjs",
-    "infra:debug": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/diagnostic.js -o .infra/diagnostic.cjs && node .infra/diagnostic.cjs",
-    "infra:fix": "curl -sSL https://raw.githubusercontent.com/anpdgovbr/docker-infra-pg/main/fix-credentials.js -o .infra/fix-credentials.cjs && node .infra/fix-credentials.cjs"
+    "infra:setup": "node .infra/scripts/setup-cross-platform.cjs",
+    "infra:setup:manual": "node .infra/scripts/setup-cross-platform.cjs --manual",
+    "infra:setup:force": "node .infra/scripts/setup-cross-platform.cjs --force --auto",
+    "infra:up": "node .infra/scripts/docker-helper.cjs up",
+    "infra:down": "node .infra/scripts/docker-helper.cjs down",
+    "infra:logs": "node .infra/scripts/docker-helper.cjs logs",
+    "infra:reset": "node .infra/scripts/docker-helper.cjs reset",
+    "infra:clean": "node .infra/scripts/docker-helper.cjs clean",
+    "infra:psql": "node .infra/scripts/docker-helper.cjs psql",
+    "infra:status": "node .infra/scripts/docker-helper.cjs status",
+    "infra:backup": "node .infra/scripts/docker-helper.cjs backup",
+    "infra:db:init": "node .infra/scripts/db-helper.cjs setup",
+    "infra:db:fresh": "node .infra/scripts/db-helper.cjs fresh",
+    "infra:db:migrate": "node .infra/scripts/db-helper.cjs migrate",
+    "infra:db:seed": "node .infra/scripts/db-helper.cjs seed",
+    "infra:db:studio": "node .infra/scripts/db-helper.cjs studio",
+    "infra:db:reset": "node .infra/scripts/db-helper.cjs reset",
+    "infra:update": "node .infra/scripts/update-scripts.cjs",
+    "infra:debug": "node .infra/scripts/diagnostic.cjs",
+    "infra:fix": "node .infra/scripts/fix-credentials.cjs"
   },
   "eslintConfig": {
     "extends": [
@@ -108,17 +108,17 @@
     "@anpdgovbr/rbac-prisma": "^0.2.0",
     "@anpdgovbr/rbac-provider": "^0.2.0",
     "@anpdgovbr/rbac-react": "^0.3.0",
-    "@anpdgovbr/shared-types": "0.3.1-beta.0",
-    "@anpdgovbr/shared-ui": "0.3.11-beta.0",
+    "@anpdgovbr/shared-types": "0.3.1-beta.1",
+    "@anpdgovbr/shared-ui": "0.3.13-beta.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@govbr-ds/core": "^3.6.2",
     "@hookform/resolvers": "^5.2.2",
-    "@mui/icons-material": "^7.3.4",
-    "@mui/material": "^7.3.4",
-    "@mui/material-nextjs": "^7.3.3",
-    "@mui/x-data-grid": "^8.16.0",
-    "@prisma/client": "6.18.0",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
+    "@mui/material-nextjs": "^7.3.5",
+    "@mui/x-data-grid": "^8.17.0",
+    "@prisma/client": "6.19.0",
     "critters": "^0.0.25",
     "dayjs": "^1.11.19",
     "js-cookie": "^3.0.5",
@@ -130,13 +130,13 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
     "react-lgpd-consent": "^0.5.4",
-    "recharts": "^3.3.0",
+    "recharts": "^3.4.1",
     "remask": "^1.2.2",
     "swr": "^2.3.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.0",
+    "@eslint/js": "^9.39.1",
     "@next/codemod": "^16.0.1",
     "@next/eslint-plugin-next": "^16.0.1",
     "@types/chai": "^5.2.3",
@@ -155,8 +155,8 @@
     "@types/json-schema": "^7.0.15",
     "@types/json5": "^2.2.0",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^24.9.2",
-    "@types/papaparse": "^5.3.16",
+    "@types/node": "^24.10.0",
+    "@types/papaparse": "^5.5.0",
     "@types/parse-json": "^7.0.0",
     "@types/prop-types": "^15.7.15",
     "@types/react": "^19.2.2",
@@ -164,21 +164,21 @@
     "@types/react-transition-group": "^4.4.12",
     "@types/unist": "^3.0.3",
     "@types/use-sync-external-store": "^1.5.0",
-    "@typescript-eslint/eslint-plugin": "^8.46.2",
-    "@typescript-eslint/parser": "^8.46.2",
-    "@vitest/coverage-v8": "^4.0.6",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
+    "@vitest/coverage-v8": "^4.0.8",
     "cross-env": "^10.1.0",
-    "eslint": "^9.39.0",
+    "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.1",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
-    "prisma": "6.18.0",
+    "prisma": "6.19.0",
     "tsx": "^4.20.6",
     "typedoc": "^0.28.14",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.6"
+    "vitest": "^4.0.8"
   }
 }
